--- a/Applications/Frontend/Templates/layout.html
+++ b/Applications/Frontend/Templates/layout.html
@@ -37,7 +37,7 @@ defined('_KERNEL_FILE') or die();
 		<?php endif; ?>
 	</div>
 	<!-- javascript -->
-	<script type="text/javascript" src="Ressources/js/jquery.js"></script>
+	<script type="text/javascript" src="Ressources/js/jquery-3.7.1.min.js"></script>
 	<script type="text/javascript" src="Ressources/js/semantic.min.js"></script>
 	<script type="text/javascript" src="Ressources/js/jquery.dataTables.min.js"></script>
 	<script type="text/javascript" src="Ressources/js/jquery.slimscroll.min.js"></script>
